fix: remove scrollbar from header & footer

--- a/src/Grid/grid.scss
+++ b/src/Grid/grid.scss
@@ -45,6 +45,10 @@
     scrollbar-width: none;
   }
 
+  .overflow-y-hidden {
+    overflow-y: hidden;
+  }
+
   .grid-left-body {
     position: relative;
   }
